--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,17 +69,22 @@ a:visited {
 /* HEADER */
 #header {
     width: 30%;
+    height: 100%;
 }
 #portrait-image-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 #portrait {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 #selfie-img {
     display: flex;
@@ -177,6 +182,7 @@ a:visited {
     align-items: flex-start;
     flex-direction: column;
     padding-left: 25px;
+    width: 75%;
 }
 .project-title {
     display: flex;
@@ -209,6 +215,7 @@ a:visited {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
 }
 /* PUBLICATIONS */
 #publications-content {
